[tool.poetry]
name = "google_address_to_latlong_csv"
version = "0.1.3"
description = "This is an Python 3 Program which gets the list of data of addresses from an csv file and gives an output as csv with additional fields of latitude and longitude of the address provided by google GeoCoding API."
authors = ["Shrikant Dhayje <shrikantdhayaje@gmail.com>"]
license = "MIT"

readme = "README.md"  # Markdown files are supported

repository = "https://github.com/shriekdj/google_address_to_latlong_csv"
homepage = "https://github.com/shriekdj/google_address_to_latlong_csv"

keywords = ["google", "address", "geocoding"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
